ticketing/infra/k8s/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  # Manaage pods created with the label app: client
  selector:
    matchLabels:
      app: auth
  # create pods and give them the label app: client
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: crisroddev/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
