ticketing/infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-srv
spec:
  type: NodePort
  selector:
    app: service
  ports:
    - name: service
      protocol: TCP
      port: 4000
      targetPort: 4000
