ticketing/infra/k8s/tickets-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  # Manaage pods created with the label app: client
  selector:
    matchLabels:
      app: tickets
  # create pods and give them the label app: client
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: crisroddev/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3001
      targetPort: 3001
